# arion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doc.md  package.xml  setup.py
config/: waypoints.csv
data/: export_images.py  export_rc_in.py
launch/: camera.launch  camera_recorder.launch  camera_recored.launch  position_raw.launch  position_raw_2d.launch  prediction.launch  recorder.launch  regulator.launch  rs_odom_px4.launch
notebooks/: JSON to TFRecord.ipynb  Line detection.ipynb
src/arion/: actuator_control_node.py  camera.py  doc.md  odometry_node.py  offboard.py  position.py  position_subscriber.py  prediction.py  speed_control.py  stearing_node.py  tools.py  yaw_control.py
src/arion/control/: waypoint_control.py
src/arion/node/: actuator_control_node.py  camera_node.py  direction_regulator_node.py  odometry_node.py  position_contro_raw_node.py  position_control_2d_node.py  position_control_node.py  position_control_raw_node.py  stearing_node.py  visualization_node.py  wheel_encoder_node.py
src/arion/subscriber/: flow_subscriber.py  point_subscriber.py  position_subscriber.py  rc_subscriber.py  state_subscriber.py
