<?xml version="1.0"?>
<package format="2">
  <name>arion</name>
  <version>0.0.1</version>
  <description>The first ride in autonomus driving with rccars, px4 and ros</description>

  <maintainer email="pedrogas_g@hotmail.com">pedro</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
